add html structure and css styling

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,108 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+html {
+  margin: 0;
+  padding: 0
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+#background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 35%;
+  background-color: #50789b; 
+}
+
+.content-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.content-container > img {
+  padding: 70px;
+  margin: 50px;
+
+}
+
+.text-container {
+  display: flex;
+  flex-direction: column;
+  width: 35vw;
+  height: 60vh
+}
+
+.title-container {
+  display: flex;
+  flex-direction: row;
+  margin: 20px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.login-button {
+  display: flex;
+  flex-direction: row;
+  border: 1px solid #06365f;
+  width: 20%;
+  height: 40px;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-button > a {
+  text-decoration: none;
+  color: white;
+  padding: 5px
+}
+
+
+.pitch-container {
+  background-color: white;
+  padding: 35px;
+  border-radius: 5px;
+  box-shadow: 2px 2px 20px #888888;
+}
+
+.pitch-container > h1 {
+  font-weight: bold;
+  color: #06365f;
+  width: 25vw;
+
+}
+
+.store-buttons-container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.store-buttons-container > a {
+  padding: 10px;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+footer li {
+  float: left;
+  list-style: none;
+  color: grey;
+  padding: 5px
+}
+
+footer a {
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: bold;
 }
