--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,78 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+	font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+	margin: 0;
+	padding: 0;
+}
+.bgblue {
+	background-color: #06365f;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 33%;
+	z-index: -1;
+}
+
+.description {
+	background: url(/images/frame.png) no-repeat;
+	background-size: contain;
+	padding: 20px;
+	border-radius: 5px;
+	width: 600px;
+}
+
+.content {
+	background-image: url("/images/frame.png");
+	background-repeat: no-repeat;
+}
+
+a {
+	text-decoration: none;
+}
+
+ul {
+	display: inline;
+	list-style: none;
+}
+
+ul li {
+	float: left;
+	margin-left: 15px;
+	text-transform: uppercase;
+	color: #06365f;
+	font-weight: 500;
+}
+
+.nav-button {
+	align-items: center;
+	background: #3e719b;
+	border-radius: 5px;
+	color: #fff;
+	padding: 8px 10px;
+}
+
+div.landing-content > nav > a > img {
+	top: 50px;
+}
+
+ul li:last-child {
+	color: #bfbfbf;
+}
+
+main {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	align-content: center;
+	max-width: 1024px;
+	margin: 8% auto;
+}
+
+footer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 20px;
 }
