--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,75 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.blue-background {
+  width: 100%;
+  height: 400px;
+}
+.wrapper {
+  position: absolute;
+  top: 150px;
+  width: 100%;
+}
+
+.main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin: 30px auto 0;
+  max-width: 935px;
+  padding-bottom: 44px;
+  width: 100%;
+}
+
+.info {
+  margin-top: 12px;
+  max-width: 500px;
+}
+
+.insta-log {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 15px;
+}
+
+.headline {
+  color: #06365f;
+  max-width: 250px;
+}
+
+.main-text {
+  margin: 20px;
+  padding: 15px 10px 0 20px;
+}
+
+.background {
+  background-image: url("/images/frame.png");
+  background-repeat: no-repeat;
+}
+
+.store-icons {
+  margin-left: 20px;
+  padding-left: 15px;
+}
+
+nav {
+  padding: 0 200px 30px 200px;
+}
+
+nav > ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  list-style: none;
+  font-size: 16px;
+  font-weight: bolder;
+  color: #1c5380;
+  text-decoration: none;
+}
+
+#copyright {
+  color: grey;
+}
