--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,101 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+section {
+  display: flex;
+  margin: auto 150px ;
+  padding: 100px 60px;
+  justify-content: center;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 30px;  
+  width: 110%;
+}
+
+.log-in {
+border: solid 1px #1c5380;
+border-radius: 5px;
+padding: 10px 15px;
+display: flex;
+justify-content: space-around;
+background-image: radial-gradient(#1066b1, #4592d1);
+}
+
+nav a{
+  color: #cbdeee;
+  text-decoration: none;
+  display: flex;
+  justify-content: space-around;
+  padding-left: 10px;
+ }
+
+.casa {
+ padding-right: 10px;
+}
+
+.framework {
+  padding-top: 20px;
+  padding-left: 50px;
+  padding-right: 20px;
+  background-image: url("../images/frame.png");
+  background-size: cover;
+  width: 110%; 
+}
+section h2{
+  font-size: 2em;
+  color: #1c5380;
+  width: 80%;
+}
+.framework p {
+  width: 90%;
+ font-weight: 400;
+}
+
+.mobile-phone {
+width: 100%;
+margin-left: 50px;
+}
+
+.download{
+  margin: 20px 10px;
+}
+
+footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: auto 300px;
+  padding-bottom: 100px;
+}
+footer ul {
+  list-style: none;
+  padding-left: 0;
+  display: flex;
+  flex-direction: row;
+  
+}
+
+footer a {
+  text-decoration: none;
+  color: #1c5380;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+footer p {
+  color: #c0c5c9;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+footer ul li{
+  padding-left: 20px;
+
 }
