--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,103 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.section1 {
+  padding: 80px;
+}
+
+.section2 {
+  padding: 80px;
+}
+
+.instagram-login {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.login {
+  display: flex;
+  align-items: center;
+  background: linear-gradient(180deg, #65bce8 0%, #306485 100%);
+  border:#06365f solid 1px ;
+  
+  border-radius: 3px;
+  padding: 10px;
+}
+
+.login a {
+  text-decoration: none;
+  font-weight: 400;
+  color: white;
+  padding-left: 5px;
+}
+
+.text {
+  width: 400px;
+  height: auto;
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: 600px;
+  display: flex;
+  flex-direction: column;
+  padding: 50px;
+}
+
+.text h2 {
+  color:#06365f ;
+  width: 250px;
+}
+
+.text p {
+  padding-top: 10px;
+  font-size: 15px;
+}
+
+.apps {
+  margin-top: 40px;
+}
+
+.apps img {
+  padding-right: 10px;
+}
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer nav a {
+  text-decoration: none;
+  color: #06365f;
+  font-weight: bolder;
+  text-transform: uppercase;
+  font-size: 15px;
+  padding: 0px 10px;
+}
+
+.footer p {
+  font-size: 13px;
+  text-transform: uppercase;
 }
