--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,94 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+/* .casiperono{
+  height: 300px;
+  width: 100%;
+  background: rgb(99,148,189);
+  background: linear-gradient(180deg, rgba(99,148,189,1) 0%, rgba(8,57,98,1) 78%);
+} */
+
+section{
+  max-width: 500px;
+  
+  
+}
+
+
+
+main {
+  
+  display: flex;
+  margin-top: 100px;
+
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav figure{
+  margin-left: 0px
+}
+nav a{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 40px;
+  border-radius: 3px;
+  border: 1px solid #06365f;
+  padding: 0px 10px;
+  background: rgb(99,148,189);
+  background: linear-gradient(180deg, rgba(99,148,189,1) 0%, rgba(8,57,98,1) 78%);
+  color: white
+}
+.icon{
+  margin-right: 8px;
+}
+article{
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  border-radius: 5px;
+  padding: 10px 25px;
+  font-size: 1.1em;
+  letter-spacing: 1px;
+  font-weight: 100;
+  
+}
+article h1{
+  color: #06365f
+}
+
+footer{
+  display: flex;
+  align-items: center;
+  margin-top: 50px;
+}
+
+footer ul{
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  
+}
+a{
+  margin: 10px ;
+  text-decoration: none;
+  color: #1C5380;
+  font-weight: bolder;
+}
+footer a{
+  text-transform: uppercase;
+  font-weight: bold;
+}
+footer span{
+  color: gray
 }
