--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,104 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+
+header {
+  background-image: url(../images//bgtile.png);
+  height: 300px;
+  display: flex;
+  justify-content: center;
+}
+
+main {
+  display: flex;
+  justify-content: flex-end;
+}
+
+h1 {
+  color: #06365f;
+}
+.text {
+  width: 35%;
+  padding: 0px 15px;
+  display: flex;
+  flex-direction: column;
+  background-image: url(../images/frame.png);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  margin-right: 15%;
+  margin-top: -3%;
+}
+.text>h1 , .text>p {
+  padding: 0px 15px;
+}
+
+
+/*Para modificar el nav del footer*/
+nav ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+nav a {
+  text-decoration: none;
+  list-style: none;
+  margin: 10px;
+  text-transform: uppercase;
+  color: #3f729b;
+  font-weight: bold;
+}
+nav a:last-child {
+  color: black;
+  font-weight: normal;
+}
+
+.moviles,
+.logo,
+.login {
+  margin-top: 100px;
+}
+.logo {
+  margin-right: 50px;
+}
+
+.login img {
+  margin: -5px 10px 0 10px;
+}
+
+.logo_login {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.login {
+  
+  display: flex;
+  align-items: center;
+  color: white;
+  padding: 0 15px;
+  border: 1px solid #1c5380;
+  background-color: #6f97b6;
+  border-radius: 3px;
+  background-image: -webkit-linear-gradient(top, #6f97b6, #3f729b);
+  
+
+}
+
+footer {
+  margin-top: 4%;
+  font-size: small;
+  font-weight: 500;
+}
+.moviles {
+  margin-right: 80px;
+ 
+  
+}
+
+.install {
+  display: flex;
+  justify-content: space-evenly;
+}
+
