--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,78 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+}
+
+header {
+  background-image: url("/lab-css-instagram-clone/images/bgtile.png");
+  background-repeat: repeat-x; 
+  background: linear-gradient(180deg, #65bce8 0%, #306485 100%); 
+  height: 400px;
+  display: flex;
+}
+
+section {
+  
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.info {
+  background-image: url(/lab-css-instagram-clone/images/frame.png);
+  background-repeat: no-repeat;
+  justify-content: flex-end;
+  width: 30%;
+  height: 50%;
+  margin: -130px 150px 50px 30px;
+  padding: 20px 30px;
+}
+
+nav {
+  justify-content: flex-end;
+  align-content: center;
+  margin: 180px 225px 50px 600px;
+}
+
+.twoPhones {
+  margin: -250px 100px 50px 150px;
+}
+
+.logInButton {
+  border: 1px solid #000;
+  padding: 10px;
+  margin-left: 70px;
+  border-radius: 5%;
+  box-shadow: 10px;
+  background: linear-gradient(180deg, #65bce8 0%, #306485 100%); 
+  background-repeat: repeat-x; 
+  justify-content: flex-end;
+  align-self: auto;
+  color: #fff;
+  font-weight: bold;
+}
+
+h1 {
+  color: #06365f;
+  text-align: left;
+  width: 59%;
+  font-weight: bold;
+}
+
+a {
+  text-decoration: none;
+}
+
+.iphoneDownloadButton {
+  margin-right: 15px;
+}
+
+footer {
+  margin: 30px 450px;
+  display: flex;
+  justify-content: space-between;
+}
+
+span {
+  opacity: 0.2;
 }
