--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,135 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  padding: 0;
+  margin: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 100px 0px;
+  
+  background-image: url(../images/bgtile.png);
+  background-repeat: no-repeat;
+  background-size: 100% 40%;
+}
+
+main{
+  margin: 0 auto;
+  
+  display: flex;
+
+  width: 800px;
+}
+
+div{
+  margin-left: 50px;
+  padding-top: 26px;
+
+  display: flex;
+  flex-direction: column;
+
+  justify-content: space-between;
+}
+
+div h1{
+  color: #194164;
+  font-size: 22px;
+  width: 66%;
+  line-height: 1.3em;
+  margin-bottom: 20px;
+}
+
+.logNav{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.instaImage{
+  height: 66px;
+}
+
+.logInButton{
+  background-image: linear-gradient(#749bc0, #3A678F);
+
+  padding: 10px;
+  height: 20px;
+  width: 80px;
+
+  border: solid 2px #2e5679;
+  border-radius: 4px;
+
+  text-decoration: none;
+  text-shadow: 0 1px #2e5679;
+  color: white;
+  font-weight: 900;
+  font-size: 14px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+section{
+  background-image: url(brand.png);
+
+  padding: 36px 40px;
+  margin-top: 10px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  background-image: url(../images/frame.png);
+  background-size: 100% 100%;
+}
+
+section  p{
+  font-size: 13px;
+  line-height: 1.8em;
+  margin: 6px 0;
+}
+
+.stores{
+  margin-left: 40px;
+  display: flex;
+  align-items: center;
+}
+
+.stores img{
+  width: 160px;
+  margin-right: 20px;
+}
+
+footer{
+  margin-top: 80px;
+
+  display: flex;
+  justify-content: center;
+
+  text-transform: uppercase;
+  font-weight: 900;
+  color: grey;
+  font-size: 12px;
+}
+
+ul{  
+  list-style: none;
+
+  display: flex;
+
+  font-size: 12px;  
+}
+
+ul li{
+  margin: 0 10px;
+}
+
+ul a{
+  text-decoration: none;
+
+  color: #416A8E;  
 }
