--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,96 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-y;
+}
+header {
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat;
+  padding: 180px;
+}
+nav {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  position: absolute;
+  right: 200px;
+}
+#insta-nav {
+  margin-right: 120px;
+}
+.nav-box > a {
+  font-size: 1.5em;
+  color: white;
+  text-decoration: none;
+  font: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 600;
+  border: 1px solid #1c5380;
+  background-color: #1c5380;
+  padding: 6px 15px;
+  float: right;
+  border-radius: 5px;
+}
+.nav-box > a > img {
+  margin-right: 8px;
+  margin-top: 7px;
+  float: left;
+}
+.img-container {
+  position: absolute;
+  top: 170px;
+  left: 220px;
+}
+.text-container {
+  position: absolute;
+  width: 40%;
+  left: 650px;
+  top: 300px;
+  background-color: white;
+  padding: 20px 0px 20px 40px;
+}
+.text-container > h2 {
+  color: #06365f;
+  width: 60%;
+  margin-bottom: 20px;
+}
+.text-container > p {
+  margin-bottom: 20px;
+  width: 85%;
+}
+.icon-container {
+  position: absolute;
+  left: 690px;
+  top: 620px;
+}
+#android {
+  margin-left: 50px;
+}
+footer {
+  position: absolute;
+  top: 92%;
+  right: 28%;
+}
+ul {
+  display: flex;
+  justify-content: space-between;
+}
+li {
+  list-style: none;
+  margin-left: 20px;
+}
+a {
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: 500;
+}
+#copy-a {
+  color: grey;
 }
