--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,101 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+	margin: 0;
+  padding: 0;
+}
+  
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
 }
+
+#container {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
+  margin: 100px 100px 0;
+  padding: 100;
+ }
+
+ #instagram {
+   margin: 40px;
+
+ }
+
+.nav-bar {
+   display: flex;
+   flex-direction: row;
+   padding: 10px;
+   align-items: center;
+   justify-items: baseline;
+   justify-content: space-between;
+ }
+ 
+.button{
+background: linear-gradient(180deg, #65bce8 0%, #306485 100%);
+border: 2px solid #06365f;
+padding: 3px 20px;
+
+}
+
+.login-img,  .button > p {
+  color: white;
+}
+
+#info {
+  width: 450px;
+  box-sizing: border-box;
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  padding: 50px;
+}
+ 
+h1 {
+  color: #06365f;
+}
+
+.text >p {
+  padding: 8px 0px;
+}
+
+.downloads {
+  margin-top: 10px;
+  padding-left: 0;
+}
+
+footer >ul {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: space-between;
+  list-style: none;
+  margin: 0 175px;
+}
+
+footer > ul > li {
+  display: flex;
+  flex-direction: row;
+  padding: 15px;
+  text-transform: uppercase;
+  font-size: 10px;
+  font-weight: bold;
+  color: #1c5380;
+
+}
+
+footer > ul > li >a {
+  text-decoration: none;
+  color: #1c5380;
+}
+
+footer > ul > li >p {
+  color: grey;
+}
+
