--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,70 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(/images/bgtile.png);
+  background-repeat: no-repeat;
+  background-size: 100% 400px;
+}
+
+.container1 {
+  display:flex;
+  margin-top: 200px;
+  margin-left: 200px;
+}
+.container2 {
+  margin-left: 50px;
+}
+h1 {
+  font-family: sans-serif;
+  font-size: 20px;
+  margin-left: 40px;
+  padding-top: 30px;
+  color: #06365f;
+
+
+}
+p {
+  font-family: sans-serif;
+  font-size: 16px;
+  margin-left: 40px;
+  text-align: start;
+}
+
+.backgroundShadow {
+
+  background-image: url(/images/frame.png);
+  background-repeat: no-repeat;
+  margin-left: 50px;
+  width: 800px; height: 350px;
+}
+
+.button {
+  text-align:center;
+  border-style: ridge;
+  width: 80px;
+  margin-left: 500px;
+  background-color: #06365f;
+  margin-right: 100px;
+}
+
+.tiendas {
+  margin-left: 600px;
+}
+
+footer {
+  text-align:center;
+}
+
+ul {
+text-decoration: none;
+
+}
+
+li {
+  display: inline;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin: 0 15px;
+  font-weight: bold;
+  color: #06365f;
 }
