--- a/styles/style.css
+++ b/styles/style.css
@@ -6,5 +6,77 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  margin: 100px auto 0 auto;
+  max-width: 800px;
+}
+
+h1 {
+    color: #06365f;
+}
+
+.text {
+    padding: 10px 20px;
+    width: 55%;
+    float: right;
+}
+
+footer a {
+    color: #1c5380;
+}
+
+.text image {
+    float: left;
+}
+
+.text .Button {
+    background-color: #1c5380;
+    color: white;
+    border: 2px;
+    margin-top: 20px;
+    font-size: 1.5em;
+    padding: 7px;
+    float: right;
+    vertical-align: text-top;
+}
+
+.container{
+  margin: 100px auto 0 auto;
+  max-width: 800px;
+}
+
+.iphone-left{
+  float: left;
+  width: 40%;
+}
+
+
+
+.text-box {
+    background-image: url(../images/frame.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    float: right;
+    padding: 10px 50px;
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+footer {
+    width: 60%;
+    clear: both;
+    margin: 0 auto;
+}
+
+footer li {
+    list-style-type: none;
+    
+}
+
+footer .li-items {
+    float: left;
+    text-align: center;
+    margin: 5px;
+    
 }
