--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,96 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 84px 159px;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  text-align: center;
+}
+section {
+  display: flex;
+  justify-content: center;
+}
+
+#page-body {
+  justify-content: center;
+  align-items: center;  
+
+}
+#phones {
+  margin-right: 65px;
+}
+
+#contenido {
+  width: 504px;
+}
+
+#header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#header a {
+  display: inline-block;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  background-size: cover;
+  padding: 7px 10px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 12px;
+  color: white;
+  box-shadow: 0px 0px 3px #888888;
+}
+
+#header a .home {
+  margin: 0;
+  height: 20px;
+  margin-bottom: -4px;
+  margin-right: 6px;
+}
+
+#texto {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  padding: 25px;
+  text-align: left;
+}
+
+#brand {
+  margin-left: 60px;
+}
+#app {
+  text-align: left;
+  padding: 25px;
+}
+
+#app a {
+  display: inline-block;
+  margin-right: 30px;
+}
+
+nav {
+  margin-top: 50px;
+}
+
+nav ul {
+  list-style: none;
+  text-align: center;
+}
+
+nav ul li {
+  display: inline-block;
+  margin: 0 8px;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #5080be;
+}
+
+nav ul li.copyright {
+  color: lightgray;
 }
