--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,137 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+* {
+  padding: 0;
+  margin: 0;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image:url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+header{
+  height: 100px;
+}
+
+.content-flex {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+}
+
+#left-side{
+  padding-right: 40px;
+  width: auto;
+}
+
+#right-side{
+  width: 500px;
+}
+
+#logo-and-login{
+  display: flex;
+  padding-top: 10px;
+  padding-bottom: 15px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#logo{
+  width: 60%; 
+  height: 60%;
+  padding-left: 4px;
+}
+
+.button-login{
+  font-weight: 500;
+  text-shadow: 1px 2px 1px #2f5a7b; 
+  font-size: 12px;
+  color:#e0e9ef;
+  padding: 7px 12px;
+  margin-right: 5px;
+  text-decoration: none;
+  text-align: right;
+  border-radius: 2px;
+  background: linear-gradient(180deg, #6992b2 0%, #45769e 100%);
+  filter: drop-shadow(2px 2px 2px #275b85);
+  
+}
+#img-home{
+  margin-left: -15px;
+  width: 20px;
+  vertical-align: middle;
+  filter: drop-shadow(1px 1px 1px #2f5a7b);
+  margin-right: 10px;
+  padding-left: 10px;
+}
+#white-box{
+  background: url("../images/frame.png") no-repeat;
+  padding: 40px 10px 10px 40px;  
+}
+
+#white-box p {
+  text-align: left;
+  width: 87%;
+  font-size: 14px; 
+  color: #5d5d5d;  
+  font-weight: 450;
+  line-height: 23px;
+  margin-top: 15px;
+  margin-bottom: 10px;
+}
+
+h2{
+  color: #1c5380;
+}
+
+#badges-app{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding-left: 40px;
+  margin-top: 15px;
+}
+.badges{
+  padding-right: 20px;
+}
+footer{
+  display:flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: baseline;
+}
+
+nav{
+padding-top: 50px;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+nav li{
+  padding: 10px;
+
+}
+
+nav a{
+  text-decoration: none;
+  color: #366b95;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 10px;
+}
+
+h5{
+color:#a1a1a2;
+font-size: 10px;
+text-transform: uppercase;
+margin-left: 20px;
 }
