--- a/styles/style.css
+++ b/styles/style.css
@@ -6,5 +6,134 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0px;
+  padding: 100px;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  }
+
+section {
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+}
+
+.container-left img {
+  width: auto;
+  height: 600px;
+}
+
+.container-rigth {
+  margin: 0 50px;
+  padding: 0 20px;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.bar {
+  padding: 10px 20px 5px;
+  display: flex;
+}
+
+.brand-img {
+  margin-right: 50px;
+  width: 400px;
+  height: auto;
+}
+
+.button {
+  margin-left: 50px;
+  margin-top: 20px;
+  padding: 10px 10px 10px 5px ;
+  width: 110px;
+  height: 30px;
+  text-align: center;
+  border: 3px groove #608eb1;
+  border-radius: 5%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.button a {
+  margin-left: 5px;
+  padding-top: 5px;
+  color: rgb(235, 226, 226);
+  text-decoration: none;
+  font-size: 15px;
+  font-weight: 600;
+}
+
+.button img {
+  height: 30px;
+}                
+
+article {
+  background-image: url("../images/frame.png");
+  background-size: 100% 100%;
+  border-radius: 1%;
+  width: 500px;
+  padding: 10px 75px;
+  margin: 10px;
+  text-align: left;
+}
+
+h1 {
+ color: #06365f;
+ width: 370px;
+ font-weight: 600;
+ font-size: 2rem;
+
+}
+
+article p {
+ color: #2e2525;
+ line-height: 1.5;
+ font-size: 1rem;
+ width: 450px;
+}
+
+.download-btn {
+  display: flex;
+  justify-content: center;
+  width: 500px;
+  padding-left: 50px;
+  margin-top: 20px;
+}
+
+.download-btn .btn-apple {
+  width: 200px;
+  height: auto;
+  margin-right: 20px;
+}
+
+.download-btn .btn-android {
+  width: 190px;
+  height: auto;
+  margin-left: 20px;
+}
+
+nav {
+  font-size: 15px;
+  display: flex;
+  width: 1100px;
+  margin-top: 100px;
+  margin-left: 50px;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+nav a {
+  color: #1c5380;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 10px; 
+}
+
+nav p {
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #969493;
+  margin: 0 0 10px 10px;
+  padding-left: 10px;
 }
