--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@ light blue: #1c5380
 78 128 159
 */
 html{
-  background-image: url("/images/bgtile.png");
+  background-image: url("../images/bgtile.png");
   background-size: 100% 40%;
   background-repeat: no-repeat;
 }
@@ -28,7 +28,7 @@ body {
   
 }
 .main-text{
-  background-image: url("/images/frame.png");
+  background-image: url("../images/frame.png");
   background-repeat: no-repeat;
   background-size: initial;
   width: 80%;
