--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,80 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+main {
+  display: flex;
+  width: 50%;
+  margin: 100px auto;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+button {
+  border: 1px solid rgb(83, 83, 83);
+  border-radius: 5px;
+  padding: 10px 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  color: white;
+  background: linear-gradient(rgba(255, 255, 255, 0.452), rgba(51, 166, 201, 0));
+  height: 20%;
+}
+
+nav ul {
+  list-style: none;
+  width: 700px;
+  padding: 0;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#content {
+  margin: 20px 80px;
+}
+
+article {
+  position: relative;
+  margin-bottom: 80px;
+}
+
+#center {
+  width: 80%;
+  height: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+h1 {
+  color: #06365f;
+  font-size: 35px;
+  margin: 0;
+}
+
+#content nav {
+  margin: 0 50px;
+}
+
+nav li a {
+  text-decoration: none;
+  color: #1c5380;
+}
+
+nav li {
+  color: gray;
+  font-weight: bold;
+  text-transform: uppercase;
 }
