--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,60 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+#body-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+}
+
+#footer {
+  display: flex;
+}
+
+#header {
+  display: flex;
+}
+
+#download {
+  display: flex;
+}
+
+#button {
+  display: flex;
+}
+
+#text {
+  background-image: url(../images/frame.png);
+  background-size: cover;
+  width: 450px;
+  padding: 30px;
+  margin-top: 30px;
+}
+
+p {
+  font-size: 14px;
+}
+
+h1 {
+  color: #06365f;
+  font-size: 24px;
+}
+
+#phone-img {
+  margin-right: 20px;
+}
+
+#content-container {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+}
+
+#download {
+  display: flex;
+  justify-content: space-around;
 }
