--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,134 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+
+#columns{
+  display: flex;
+  flex-direction: row;
+}
+
+/*phones*/
+
+#phones{
+  display: flex;
+  align-self: flex-start;
+  margin: 5rem;
+}
+
+/*right-column*/
+
+#right-column{
+  display: flex;
+
+  flex-direction: column;
+  align-items: stretch;
+  flex-wrap: wrap;
+  align-content: center;
+  margin: 5rem;
+}
+
+/*inside-right-column*/
+
+#header{
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-direction: row;
+  margin-left: -110px;
+  margin-right: 90px;
+}
+/*button*/
+
+button{
+  display: flex;
+  background: rgb(2,0,36);
+  background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(22,147,196,1) 0%, rgba(33,125,144,1) 29%);
+  width: 120px;
+  box-sizing: border-box;
+  border: 1em;
+  align-content: center;
+  align-items: center;
+  box-shadow: 1em;
+  margin-top: 1rem;
+  border-radius: 3px;
+}
+
+span{
+  color: white;
+  font-weight: 700;
+  background-color: transparent;
+  font-size: 15px;
+  
+}
+
+/*main*/
+
+#textbox{
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: 700px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+  margin: 5px;
+}
+
+#article{
+  margin-left: 55px;
+  margin-right: 210px;
+  display: flex;
+  flex-direction: column;
+  word-wrap: normal;
+}
+
+p{
+  display: flex;
+  justify-content: flex-start;
+}
+
+h1{
+  font-size: 20px;
+  color: #0c8291;
+  margin-right: 400px;
+  margin-top: 50px;
+}
+
+#download{
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+  padding: 5px;
+  margin-right: 150px;
+
+}
+
+img{
+  margin: 15px;
+}
+
+/*footer*/
+
+ul{
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: flex-end;
+}
+
+li{
+  list-style: none;
+  margin: 5px;
+  color: #0c8291;
+  font-weight: bold;
+}
+
+.watermark{
+  color: grey;
 }
